added comments to first working draft

--- a/index.html
+++ b/index.html
@@ -33,6 +33,8 @@
       <button id="undo_btn" class="button" disabled>Undo</button>
     </div>
 
+    <!-- TODO: add file input/output -->
+
     <footer>
       <p>Built by some dummy at <a href="http://www.fullstackacademy.com/">Fullstack Academy</a></p>
     </footer>
